# retro

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  mode.rs  note.rs  remote.rs  state.rs
src/app/: command.rs  mod.rs  mode.rs  note.rs  sentiment.rs  state.rs
src/event/: event.rs
src/events/: mod.rs
src/events/handlers/: command_handler.rs  help_handler.rs  mode_handler.rs
src/handlers/: command_handler.rs  group_handler.rs  help_handler.rs  insert_handler.rs  mod.rs  mode_handler.rs  vote_handler.rs
src/network/: actions.rs  mod.rs  network.rs  remote.rs
src/state/: mod.rs  note.rs  state.rs
src/ui/: command_textbox.rs  help.rs  mod.rs  new_note.rs  notes_list.rs  room_info.rs  status_bar.rs
