[package]
name = "retro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25.0"
serde = { version = "1.0.149", features = ["derive"] }
tui = "0.19.0"
tui-textarea = "0.2.0"
