[package]
name = "retro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25.0"
firestore_grpc = "0.141.0"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
tui = "0.19.0"
tui-textarea = "0.2.0"
